# shortlist-llm-assessor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yaml
docker/: Dockerfile
llm_assessor/: __main__.py
